# nubank

./: .gitignore  calculate_investiments.py  main.py  pyproject.toml  query_calculate_balance.sql  sql.sql
Tables/pix_movements/: .~lock.part-00000-tid-8322739320471544484-12382b61-f87b-4388-931d-ec1681d2aad1-10545794-1-c000.xlsx#
connections/: connection_postgresql.py
ingestion_data/: ingestion_datasets_postgresql.py
process_data/: read_and_process_postgresql.py
utils/: utils.py
