[tool.poetry]
name = "nubank"
version = "0.1.0"
description = ""
authors = ["yes"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.3"
openpyxl = "^3.1.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
